# docs/reference/openapi.json
@@ -7102,7 +7102,6 @@
         "type": "object",
         "required": [
           "available",
-          "reason",
           "message",
           "capabilities"
         ],
@@ -7117,7 +7116,14 @@
             "type": "string"
           },
           "reason": {
-            "$ref": "#/components/schemas/AlgoliaMigrationAvailabilityReason"
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/AlgoliaMigrationAvailabilityReason"
+              }
+            ]
           }
         }
       },
@@ -8273,7 +8279,8 @@
               "null"
             ],
             "format": "int32",
-            "minimum": 0
+            "maximum": 100,
+            "minimum": 1
           }
         }
       },
